--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Counter App</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Prevents cache so changes can be displayed instantly in https://yadiel-otero.github.io/Counter/ -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
 </head>
 
 <body>
@@ -64,7 +69,7 @@
 
     <!--Temporary testing scripts-->
     <script>
-      
+
     </script>
 </body>
 
