--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter App</title>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/general.css">
+    <link rel="stylesheet" href="/styles/counter.css">
+    <link rel="stylesheet" href="/styles/toolbar.css">
+    <link rel="stylesheet" href="/styles/screen.css">
 
     <!-- Prevents cache so changes can be displayed instantly in https://yadiel-otero.github.io/Counter/ -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
